Fixed spacing issue on safari. Fixed issue on Firefox where buttons in banner video where not aligned.

--- a/bathroom-happiness/sass/pages/_water_therapy.scss
+++ b/bathroom-happiness/sass/pages/_water_therapy.scss
@@ -26,7 +26,10 @@ body.water-therapy{
 						position: absolute;
 						bottom: 20px;
 						left: 20px;
-						z-index: 2;												
+						z-index: 2;
+						li{
+							vertical-align: middle;
+						}												
 					}
 					button{
 						@include appearance(none);
@@ -161,13 +164,11 @@ body.water-therapy{
 					position: relative;
 					.videos{
 						position: relative;
-						overflow: hidden;
 						background: black;
 					}
 					.video{
 						width: 100%;
 						height: 100%;
-						overflow: hidden;
 						position: absolute;
 						top: 0;
 						left: 0;
@@ -185,7 +186,6 @@ body.water-therapy{
 						}
 					}
 					.video-iframe-wrap{
-							overflow: hidden;
 							display: none;
 							@media (min-width: $screen-sm){
 								display: block;
@@ -282,6 +282,7 @@ body.water-therapy{
 			#water-therapy-content{
 				background: black;
 				position: relative;
+				overflow: hidden;
 				.container-fluid{
 					max-width: 1366px;
 					padding: 0;
@@ -308,7 +309,6 @@ body.water-therapy{
 						position: relative;
 						perspective: 1000px;
 	  				.section-content {
-	  					overflow: hidden;
 	  					position: relative;
 	  					transform-style: preserve-3d;
 						  //@include transform(translateZ( -100px ));
@@ -402,6 +402,9 @@ body.water-therapy{
 					}
 				}//slides
 			}//#water-therapy-content
+			.section-1{
+				position: relative;
+			}
 			.section-2, .section-3,
 		  .slider-2, .slider-3{
 				position: absolute;
